# notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
analysis/: student-exam.ipynb  student_analysis.ipynb
credit-modeling/: 1.0_EDA.ipynb  1.1_MODEL_BUILDING.ipynb  2.0_EDA.ipynb  README.md  pyproject.toml
credit-modeling/data/: Features_Target_Description.xlsx  README.md  credit-modeling.parquet  preprocessed_data.parquet
credit-modeling/eda/: __init__.py  hypothesis.py  output.py  utils.py
credit-modeling/sambhavm22/: EDA2.ipynb  Feature_engnerring.ipynb  README.md  model_training_with_pipeline.ipynb  model_training_without_pipeline.ipynb  model_training_without_scaling.ipynb
data/: README.md  samsung_galaxy.csv
election-2024/: app.py  pyproject.toml
election-2024/data/: results.csv
election-2024/src/: scrape.py
extra/: QuantileRegressor.ipynb  browser_history_mo.py  data_job_salaries.ipynb  delhivery.py  election-77-14.ipynb  news-analysis.ipynb  search-keywords.ipynb  student-exam.ipynb  student_analysis.ipynb
finetune-tranformers/: bert_keras.py  bert_peft_1_mo.py  bert_peft_2_mo.py  bert_torch.py  bert_torch_2.py  bert_torch_2_mo.py  bert_torch_mo.py
llm/chat-with-data/: README.md  _1_query_pandas_df.py  _2_sql_react_agent.py  _3_few_shot_chat.py  _3_few_shot_chat_mo.py
marimo/: .gitignore  README.md  delhivery.py  test_notebook.py
spotify-analysis/: Marquee.ipynb  Playlist.ipynb  StreamingHistory.ipynb  analyse_whole_history_mo.py  pl-tracks-using-api.ipynb  your-library.ipynb
yt-watch-history/: 1.0_ChannelRecoSys.ipynb  1.0_PREPROCESSING.ipynb  1.1_ChannelRecoSys.ipynb  1.1_PREPROCESSING.ipynb  1.2_EDA.ipynb  2.0_EDA.ipynb  contentType.ipynb  contentTypeNew.ipynb
