[project]
name = "notebooks"
version = "0.1.0"
description = "Contains notebook of all my projects."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gmail.com" }]
requires-python = ">= 3.11"
dependencies = ["polars==0.20.10"]

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ipykernel==6.29.2"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
