[project]
name = "notebooks"
version = "0.1.0"
description = "Contains notebook of all my projects."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gmail.com" }]
requires-python = ">= 3.11"
# Add dependencies as you need it
dependencies = []

[tool.rye]
managed = true
virtual = true
# ipykernel used to initiate Jupyter Notebook session in VSCode
dev-dependencies = [
    "ipykernel==6.29.4",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
