[project]
name = "notebooks"
version = "0.1.0"
description = "Contains notebook of all my projects."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gmail.com" }]
requires-python = ">= 3.11"
# Add dependencies as you need it
dependencies = []

[tool.rye]
managed = true
virtual = true
# ipykernel used to initiate Jupyter Notebook session in VSCode
dev-dependencies = ["ipykernel==6.29.4"]

[tool.ruff]
target-version = "py311"
show-fixes = true

[tool.ruff.lint]
extend-select = [
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM812",
    "E",
    "EM",
    "F",
    "I",
    "ICN",
    "INP",
    "ISC",
    "PGH",
    "PIE",
    "PT",
    "PL",
    "PTH",
    "PYI",
    "Q",
    "FLY",
    "RSE",
    "RUF",
    "S",
    "SLF",
    "SIM",
    "TCH",
    "ARG",
    "UP",
    "W",
    "YTT",
    "FURB",
]
extend-ignore = [
    "B008",
    "B905",
    "E501",
    "E741",
    "EM101",
    "PLR2004",
    "ISC001",
    "N818",
    "PGH003",
    "S101",
    "S301",
    "UP035",
]
extend-unfixable = ["B", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
