[project]
name = "election-2024"
version = "0.1.0"
description = "A streamlit dashboard to showcase seats shares in India Election 2024."
authors = [{ name = "Anshul Raj Verma", email = "arv.anshul.1864@gamail.com" }]
dependencies = [
    "httpx==0.27.0",
    "polars==0.20.31",
    "plotly==5.22.0",
    "streamlit==1.35.0",
]
requires-python = ">=3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = ["ipykernel==6.29.4"]
